--- a/src/components/AdminLayout/AdminLayout.scss
+++ b/src/components/AdminLayout/AdminLayout.scss
@@ -38,6 +38,24 @@
         position: relative;
         margin-bottom: 10px;
 
+        &:nth-child(1)::before{
+            padding-left: 25px;
+            content: "";
+            display: inline-block;
+            width: 15px;
+            height: 15px;
+            background-image: url("../../assets/icons/users.svg");
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: left center;
+        }
+
+        &:hover::before{
+            background-image: url("../../assets/icons/users-red.svg");
+            // fill: #f00!important;
+            // stroke: #f00!important;
+        }
+
         &::after {
             position: absolute;
             top: 0;
@@ -68,6 +86,7 @@
         width: calc(100% - 250px);
         height: 100vh;
         overflow-y: auto;
+        padding: 30px;
         background-color: #ccc;
     }
 }
