--- a/src/components/AdminLayout/AdminLayout.scss
+++ b/src/components/AdminLayout/AdminLayout.scss
@@ -38,7 +38,7 @@
         position: relative;
         margin-bottom: 10px;
 
-        &:nth-child(1)::before{
+        &:nth-child(1)::before {
             padding-left: 25px;
             content: "";
             display: inline-block;
@@ -50,7 +50,7 @@
             background-position: left center;
         }
 
-        &:hover::before{
+        &:hover::before {
             background-image: url("../../assets/icons/users-red.svg");
             // fill: #f00!important;
             // stroke: #f00!important;
@@ -69,7 +69,8 @@
             content: "";
         }
 
-        &:hover::after, &:hover{
+        &:hover::after,
+        &:hover {
             height: 100%;
             color: #f00;
         }
@@ -77,7 +78,7 @@
 
     &__start--nav-link {
         font-size: 18px;
-        &:hover{
+        &:hover {
             color: #f00;
         }
     }
